subscriptionservice/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: subscription
  template:
    metadata:
      labels:
        app: subscription
    spec:
      containers:
        - name: subscription
          image: txtbits/subscription:0.0.1-SNAPSHOT
          ports:
            - name: http
              containerPort: 8885
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
spec:
  type: LoadBalancer
  selector:
    app: subscription
  ports:
    - name: http
      port: 8885
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscription-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscription-service
                port:
                  number: 8885
